--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "@popperjs/core": "^2.5.3",
         "@tailwindcss/forms": "^0.3.1",
         "@tailwindcss/typography": "^0.4.0",
+        "admin-lte": "^3.1.0",
         "alpinejs": "^3.2.6",
         "axios": "^0.21",
-        "bootstrap": "^5.1.0",
+        "bootstrap": "^4.6.0",
+        "jquery": "^3.5.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
+        "overlayscrollbars": "^1.13.0",
+        "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
         "resolve-url-loader": "^4.0.0",
