--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "compile": [
+            "@php app/console assetic:dump --env=prod --no-debug",
+            "MyVendor\\MyClass::postDeployComposerCallback"
         ]
     },
     "extra": {
